Bug 303713 Allow content to type into textfields using key events r+sr=jst